--- a/html/lol/card.html
+++ b/html/lol/card.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../../css/lol/card.css">
 </head>
 <body>
-    <div id="nav">
-    </div>
+    <div id="nav"></div>
     <div id="cards">
         <div id="subText">League of Legends</div>
         <div id="mainText">Most Champions</div>
