--- a/html/artist/list.html
+++ b/html/artist/list.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../../css/home.css">
     <link rel="stylesheet" href="../../css/nav.css">
     <link rel="stylesheet" href="../../css/artist/list.css">
+    <link rel="stylesheet" href="../../css/artist/music.css">
 </head>
 <body>
     <div id="nav"></div>
@@ -17,10 +18,10 @@
                 <div class="details">
                     <h2>Lee SSang<br/><span>GARY & GILL</span></h2>
                     <ul class="social_icons">
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-youtube"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="musical-notes-outline"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-youtube"></ion-icon></a></li>
+                        <li><div class="detailBtn musicBtn" id="musicBtn_1"><ion-icon class="ion-icon" name="musical-notes-outline"></ion-icon></div></li>
                     </ul>
                 </div>
             </div>
@@ -33,10 +34,10 @@
                 <div class="details">
                     <h2>HuckleberryP<br/><span>HiLite</span></h2>
                     <ul class="social_icons">
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-youtube"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="musical-notes-outline"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-youtube"></ion-icon></a></li>
+                        <li><div class="detailBtn musicBtn" id="musicBtn_2"><ion-icon class="ion-icon" name="musical-notes-outline"></ion-icon></div></li>
                     </ul>
                 </div>
             </div>
@@ -49,16 +50,19 @@
                 <div class="details">
                     <h2>Supreme Team<br/><span>SimonD & ESENS</span></h2>
                     <ul class="social_icons">
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="logo-youtube"></ion-icon></a></li>
-                        <li><a href=""><ion-icon class="ion-icon" name="musical-notes-outline"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-youtube"></ion-icon></a></li>
+                        <li><div class="detailBtn musicBtn" id="musicBtn_3"><ion-icon class="ion-icon" name="musical-notes-outline"></ion-icon></div></li>
                     </ul>
                 </div>
             </div>
         </div>
+        <div id="music"></div>
+        <div id="off">&lt;</div>
     </div>
     <script type="text/javascript" src="../../js/nav.js"></script>
+    <script type="text/javascript" src="../../js/artist/music.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
