--- a/html/artist/list.html
+++ b/html/artist/list.html
@@ -32,7 +32,7 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>HuckleberryP<br/><span>HiLite</span></h2>
+                    <h2>HuckleberryP<br/><span>Pinodyne</span></h2>
                     <ul class="social_icons">
                         <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
                         <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
