--- a/html/lol/card.html
+++ b/html/lol/card.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="nav"></div>
-    <div id="cards">
+    <div id="list">
         <div id="subText">League of Legends</div>
         <div id="mainText">Most Champions</div>
         <div class="card">
