--- a/html/artist/card.html
+++ b/html/artist/card.html
@@ -58,12 +58,13 @@
                 </div>
             </div>
         </div>
-        <div id="music"></div>
         <div id="back">&lt;</div>
+        <div id="music"></div>
     </div>
     <script type="text/javascript" src="../../js/nav.js"></script>
     <script type="module" src="../../js/artist/card.js"></script>
     <script type="module" src="../../js/artist/music.js"></script>
+    <script type="module" src="../../js/artist/wave.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
