--- a/html/artist/card.html
+++ b/html/artist/card.html
@@ -42,13 +42,13 @@
                 </div>
             </div>
         </div>
-        <div class="card" id="SupremeTeam">
+        <div class="card" id="ESENS">
             <div class="imgBox">
-                <img src="../../img/artist/SupremeTeam/profile.png">
+                <img src="../../img/artist/ESENS/profile.png">
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Supreme Team<br/><span>SimonD & ESENS</span></h2>
+                    <h2>ESENS<br/><span>Supreme Team</span></h2>
                     <ul class="social_icons">
                         <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-facebook"></ion-icon></a></li>
                         <li><a href="" class="detailBtn"><ion-icon class="ion-icon" name="logo-instagram"></ion-icon></a></li>
